Style: fixed spacing issues in footer of home page

--- a/src/containers/footer/index.scss
+++ b/src/containers/footer/index.scss
@@ -22,9 +22,9 @@ footer{
 
     span{
         position: absolute;
-        left: 48%;
+        left: 47%;
         top: 20%;
-        height: 60%;
+        height: 45%;
         border-right: #ffffff solid 1px;
 
         @media(max-width: 1000px){
@@ -50,10 +50,12 @@ footer{
         p{
             display: block;
             bottom: 15px;
-            left: 5%;
             width: fit-content;
             height: fit-content;
             margin: 0;
+
+            width: 100%;
+            text-align: center;
         }
     }
 
